# dx_todo_app

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
dev/dx_todo_app/.bmad-core/: install-manifest.yaml
examples/: android.rs
src/: app.rs  app_assets.rs  export.rs  export_android.rs  lib.rs  main.rs  models.rs  pdf_export.rs  state.rs  storage.rs
src/_bin_off/: desktop.rs
src/components/: add_form.rs  filter_bar.rs  header.rs  mod.rs  projects.rs  todo_item.rs
src/export/: export_android.rs
src/i18n/: en-US.ftl  ru-RU.ftl
src/pages/: details.rs  list.rs  mod.rs  projects.rs
