[package]
name = "dx_todo_app"
version = "0.1.0"
authors = ["koshelev.s <koshelev.s@ingry.tech>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
dioxus-desktop = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
